--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -1,4 +1,4 @@
-#home-container {
+#home {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     height: 100%;
     color: var(--main-green);
+    margin-block: 2rem;
 }
 
 #home-morse {
