--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -19,6 +19,7 @@ body {
     width: 100%;
     aspect-ratio: 16/9;
     margin-block: 15px;
+    color: var(--main-green);
 }
 
 /*Main Screen*/
@@ -29,8 +30,7 @@ body {
     width: 100%;
     height: 100%;
     background: black;
-    border: 2px solid var(--main-green);
-    border-top: 0;
+    border-inline: 2px solid var(--main-green);
     overflow: auto;
 }
 
@@ -43,27 +43,24 @@ body {
 
 #screen-input {
     display: flex;
-    position: sticky;
-    bottom: 0;
+    border: 2px solid var(--main-green);
 }
 
 #screen-input > input {
     width: 100%;
     box-sizing: border-box;
     background-color: black;
-    border: 0;
-    border-top: 2px solid var(--main-green);
     outline: 0;
     height: 25px;
     font-family: monospace;
     color: white;
+    border: 0;
 }
 
 #screen-input > button {
     border: 0;
     background: var(--main-green);
     padding-inline: 15px;
-    border-top: 2px solid var(--main-green);
     border-left: 2px solid var(--main-green);
 }
 
@@ -73,6 +70,12 @@ body {
     color: white;
 }
 /*Main Screen*/
+
+/*Error*/
+.error {
+    color: var(--main-green);
+}
+/*Error*/
 
 /*Top Bar*/
 #main-top-bar {
