--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,24 +2,26 @@
 
 :root {
     --main-green: #006321;
+    --dur: 1000ms;
 }
 
 body {
-    background: #181818;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     margin: 0;
     font-family: monospace;
+    color: var(--main-green);
+    background: #181818;
 }
 
 #main-container {
+    display: flex;
+    flex-direction: column;
     max-width: 1250px;
     width: 100%;
     aspect-ratio: 16/9;
-    margin-block: 15px;
-    color: var(--main-green);
 }
 
 /*Main Screen*/
@@ -34,13 +36,6 @@ body {
     overflow: auto;
 }
 
-#main-screen-text {
-    padding-left: 4px;
-    color: var(--main-green);
-    flex-grow: 1;
-    overflow-y: auto;
-}
-
 #screen-input {
     display: flex;
     border: 2px solid var(--main-green);
@@ -48,13 +43,12 @@ body {
 
 #screen-input > input {
     width: 100%;
-    box-sizing: border-box;
-    background-color: black;
     outline: 0;
     height: 25px;
-    font-family: monospace;
-    color: white;
     border: 0;
+    font-family: monospace;
+    background-color: black;
+    color: white;
 }
 
 #screen-input > button {
@@ -71,24 +65,21 @@ body {
 }
 /*Main Screen*/
 
-/*Error*/
-.error {
-    color: var(--main-green);
-}
-/*Error*/
-
 /*Top Bar*/
 #main-top-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    width: 100%;
     background-color: var(--main-green);
     height: 25px;
     border: 2px solid var(--main-green);
     border-bottom: 0;
     padding-inline: 4px;
+
+    span {
+        color: black;
+    }
 }
 
 #main-top-right {
@@ -96,12 +87,36 @@ body {
     align-items: center;
     justify-content: center;
     gap: 6px;
-}
 
-#main-top-right > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
+    div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid black;
+    }
 }
 /*Top Bar*/
+
+/*Help*/
+#help {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0.5rem;
+
+    h1 {
+        width: fit-content;
+        border-block: 2px dashed var(--main-green);
+    }
+
+    p {
+        margin-block: 0.3rem;
+    }
+}
+/*Help*/
+
+@media(max-width: 1250px) {
+    #main-container {
+        width: 100vw;
+        height: 100vh;
+    }
+}
