--- a/stylesheets/stack.css
+++ b/stylesheets/stack.css
@@ -3,16 +3,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box;
     margin-block: 2rem;
-    color: var(--main-green);
 }
 
 /*SVG*/
 #stack-svg {
-    width: fit-content;
     perspective: 800px;
     animation: rotate 10s linear infinite;
+    border: 2px solid var(--main-green);
+    padding: 1rem;
+    background-color: #00800021;
 }
     
 @keyframes rotate {
@@ -25,15 +25,27 @@
 }
 /*SVG*/
 
-/*Headings*/
-#stack-h1 {
-    font-size: 2rem;
+/*Text*/
+#stack-text {
+    border-block: 2px dashed var(--main-green);
+    margin: 2rem;
+    background-color: #00800021;
+    max-width: 350px;
+    width: 100%;
+    text-align: center;
+    padding-block: 1rem;
 }
 
-#stack-h2 {
-    font-size: 1.5rem;
+#stack-h1 {
+    font-size: 2rem;
+    margin-block: 0;
 }
-/*Headings*/
+
+#stack-p {
+    font-size: .8rem;
+    margin-bottom: 0;
+}
+/*Text*/
 
 /*Links Container*/
 #stack-lang-container {
@@ -48,7 +60,7 @@
     display: flex;
     color: var(--main-green);
     font-size: 1rem;
-    margin-block: 8px;
+    margin-block: 0.5rem;
     cursor: pointer;
     text-decoration: none;
     border-bottom: 1px solid var(--main-green);
@@ -62,19 +74,54 @@
 .stack-lang:hover {
     color: white;
     border-color: white;
+    background-color: #0080006c;
 }
 /*Links*/
 
 /*Arrow Animation*/
+.stack-lang:hover > span:nth-child(1) {
+    animation: arrowAnim var(--dur) linear infinite;
+}
+
+.stack-lang:hover > span:nth-child(2) {
+    animation: arrowAnim var(--dur) linear infinite;
+    animation-delay: 150ms;
+}
+
+.stack-lang:hover > span:nth-child(3) {
+    animation: arrowAnim var(--dur) linear infinite;
+    animation-delay: 350ms;
+}
+
+.stack-lang:hover > span:nth-child(5) {
+    animation: arrowAnim var(--dur) linear infinite;
+    animation-delay: 350ms;
+}
+
+.stack-lang:hover > span:nth-child(6) {
+    animation: arrowAnim var(--dur) linear infinite;
+    animation-delay: 150ms;
+}
+
+.stack-lang:hover > span:nth-child(7) {
+    animation: arrowAnim var(--dur) linear infinite;
+}
+
 @keyframes arrowAnim {
-    from {
-        opacity: 100%;
+    0%, 49% {
+        opacity: 0;
     }
-    50% {
-        opacity: 0%;
+    50%, 80% {
+        opacity: 100;
     }
-    to {
-        opacity: 100%;
+    81%, 100% {
+        opacity: 0;
     }
 }
 /*Arrow Animation*/
+
+@media(max-width: 600px) {
+    #stack {
+        margin-inline: 1rem;
+    }
+}
