--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -3,8 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    margin: 2rem;
+    margin-block: 2rem;
 }
 
 #home > div {
