--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -1,59 +1,51 @@
 #home {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin-block: 2rem;
+    height: 100%;
 }
 
-#home > div {
-    border-block: 2px dashed var(--main-green);
-    margin-block: 2rem;
-    background-color: #00800021;
-    padding-inline: 1rem;
+#home-letter {
+    font-size: 40px;
 }
 
-/*Image*/
-#home-img {
-    width: 200px;
-    height: 200px;
-    perspective: 800px;
-    animation: rotate 10s linear infinite;
-    border: 2px solid var(--main-green);
+#home-main {
+    width: 100%;
+    margin-left: 10rem;
 }
 
-@keyframes rotate {
-    from {
-        transform: rotateY(0deg);
-    }
-    to {
-        transform: rotateY(360deg);
-    }
-}
-/*Image*/
-
-/*Headings*/
-#home-h1 {
-    font-size: 2rem;
-    margin-top: 1rem;
-}
-
-#home-h2, #home-h3 {
+#home-fieldset {
+    border: 0;
+    border-left: 2px solid var(--main-green);
+    border-block: 2px solid var(--main-green);
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
     font-size: 1.5rem;
-    margin-block: 1rem;
+
+    legend {
+        margin: 0 auto;
+    }
 }
-/*Headings*/
 
-@media(max-width: 600px) {
-    #home {
-        margin-inline: 1rem;
+#links-fieldset {
+    border: 0;
+    padding: 0;
+    border-top: 2px solid var(--main-green);
+
+    legend {
+        margin: 0 12px;
     }
+}
 
-    #home-h1 {
-        font-size: 1.5rem;
-    }
+#home-lights {
+    margin-top: 24px;
 
-    #home-h2, #home-h3 {
-        font-size: 1.2rem;
+    > div {
+        display: flex;
+
+        div {
+            background-color: var(--main-green);
+            width: 60px;
+            height: 40px;
+        }
     }
 }
