--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,122 +2,116 @@
 
 :root {
     --main-green: #006321;
-    --dur: 1000ms;
+    --auxiliary-green: #0063212d;
 }
 
 body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100dvh;
+    min-height: 100vh;
     margin: 0;
-    font-family: monospace;
+    font-family: "VT323", monospace;
     color: var(--main-green);
-    background: #181818;
+    background: #000;
+}
+
+a {
+    color: var(--main-green);
 }
 
 #main-container {
     display: flex;
     flex-direction: column;
-    max-width: 1250px;
-    width: 100%;
-    aspect-ratio: 16/9;
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--auxiliary-green);
+    box-sizing: border-box;
+    padding: 4rem;
 }
 
-/*Main Screen*/
-#main-screen {
+#buttons {
     display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
+    gap: 8px;
+
+    button {
+        background: none;
+        border: 0;
+        color: var(--main-green);
+        font-size: 1.5rem;
+        border: 2px solid var(--main-green);
+        padding-block: 8px;
+        width: 100%;
+        font-family: "VT323", monospace;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: var(--main-green);
+        color: #000;
+    }
+}
+
+#crt {
+    position: fixed;
     width: 100%;
     height: 100%;
-    background: black;
-    border-inline: 2px solid var(--main-green);
-    overflow: auto;
+    background:     
+        linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
+        linear-gradient(90deg, rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%);
+    background-size:
+        100% 3px, 
+        4px 100%;
+    opacity: 70%;
+    animation: flicker 0.15s infinite;
+    pointer-events: none;
 }
 
-#screen-input {
-    display: flex;
-    border: 2px solid var(--main-green);
-}
-
-#screen-input > input {
+#scanline {
+    position: fixed;
     width: 100%;
-    outline: 0;
-    height: 25px;
-    border: 0;
-    font-family: monospace;
-    background-color: black;
-    color: white;
+    height: 100px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 99, 33, 0.5) 10%, rgba(0, 0 ,0 , 0.1) 100%);
+    opacity: 35%;
+    animation: scanmove 30s infinite;
+    pointer-events: none;
 }
 
-#screen-input > button {
-    border: 0;
-    background: var(--main-green);
-    padding-inline: 15px;
-    border-left: 2px solid var(--main-green);
-    color: black;
-}
-
-#screen-input > button:hover {
-    cursor: pointer;
-    background-color: black;
-    color: white;
-}
-/*Main Screen*/
-
-/*Top Bar*/
-#main-top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    background-color: var(--main-green);
-    height: 25px;
-    border: 2px solid var(--main-green);
-    border-bottom: 0;
-    padding-inline: 4px;
-
-    span {
-        color: black;
+@keyframes scanmove {
+    0% { 
+        top: -50%; 
+    }
+    20% {
+        top: 100%;
+    }
+    to { 
+        top: 100%; 
     }
 }
 
-#main-top-right {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 6px;
-
-    div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 1px solid black;
+@keyframes flicker {
+    0% {
+        opacity: 0.27;
     }
-}
-/*Top Bar*/
-
-/*Help*/
-#help {
-    display: flex;
-    flex-direction: column;
-    margin-left: 0.5rem;
-
-    h1 {
-        width: fit-content;
-        border-block: 2px dashed var(--main-green);
+    8% {
+        opacity: 0.18;
     }
-
-    p {
-        margin-block: 0.3rem;
+    16% {
+        opacity: 0.23;
     }
-}
-/*Help*/
-
-@media(max-width: 1250px) {
-    #main-container {
-        width: 100vw;
-        height: 100dvh;
+    24% {
+        opacity: 0.10;
+    }
+    32% {
+        opacity: 0.18;
+    }
+    40% {
+        opacity: 0.23;
+    }
+    48% {
+        opacity: 0.18;
+    }
+    56% {
+        opacity: 0.27;
     }
 }
