--- a/stylesheets/stack.css
+++ b/stylesheets/stack.css
@@ -1,127 +1,133 @@
 #stack {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-block: 2rem;
 }
 
-/*SVG*/
-#stack-svg {
-    perspective: 800px;
-    animation: rotate 10s linear infinite;
-    border: 2px solid var(--main-green);
-    padding: 1rem;
-    background-color: #00800021;
+#carousel-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 90%;
 }
+
+#carousel-panels {
+    position: relative;
+    display: flex;
+    height: inherit;
+}
+
+#carousel-prev, #carousel-next {
+    background: none;
+    border: 0;
+    color: var(--main-green);
+    border: 2px solid var(--main-green);
+    padding-inline: 12px;
+    font-size: 8rem;
+    cursor: pointer;
+    font-family: var(--main-font);
+    z-index: 10;
+}
+
+#carousel-prev:hover, #carousel-next:hover {
+    background-color: var(--main-green);
+    color: #000;
+}
+
+.panel {
+    display: none;
+    position: fixed;
+    right: 50%;
+    transform: translateX(50%);
+    text-align: center;
+    border: 2px solid var(--main-green);
+    padding-inline: 50px;
+    padding-block: 20px;
+    height: 60%;
     
-@keyframes rotate {
+    p {
+        font-size: 3rem;
+        margin-bottom: 0;
+    }
+
+    p::before {
+        content: "< ";
+    }
+
+    p::after {
+        content: " >";
+    }
+
+    img {
+        height: 80%;
+    }
+}
+
+#carousel-all {
+    display: flex;
+    height: 10%;
+    gap: 8px;
+
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: none;
+        border: 0;
+        cursor: pointer;
+        height: fit-content;
+        padding: 4px;
+    }
+
+    img {
+        height: 50px;
+    }
+}
+
+@keyframes transitionOutLeft {
     from {
-        transform: rotateY(0deg);
+        opacity: 100%;
     }
     to {
-        transform: rotateY(360deg);
-    }
-}
-/*SVG*/
-
-/*Text*/
-#stack-text {
-    border-block: 2px dashed var(--main-green);
-    margin: 2rem;
-    background-color: #00800021;
-    max-width: 350px;
-    width: 100%;
-    text-align: center;
-    padding-block: 1rem;
-}
-
-#stack-h1 {
-    font-size: 2rem;
-    margin-block: 0;
-}
-
-#stack-p {
-    font-size: .8rem;
-    margin-bottom: 0;
-}
-/*Text*/
-
-/*Links Container*/
-#stack-lang-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-/*Links Container*/
-
-/*Links*/
-.stack-lang {
-    display: flex;
-    color: var(--main-green);
-    font-size: 1rem;
-    margin-block: 0.5rem;
-    cursor: pointer;
-    text-decoration: none;
-    border-bottom: 1px solid var(--main-green);
-
-    p {
-        margin: 0;
-        padding-inline: 0.5rem;
+        opacity: 0%;
+        right: 75%;
+        scale: 50%;
     }
 }
 
-.stack-lang:hover {
-    color: white;
-    border-color: white;
-    background-color: #0080006c;
-}
-/*Links*/
-
-/*Arrow Animation*/
-.stack-lang:hover > span:nth-child(1) {
-    animation: arrowAnim var(--dur) linear infinite;
-}
-
-.stack-lang:hover > span:nth-child(2) {
-    animation: arrowAnim var(--dur) linear infinite;
-    animation-delay: 150ms;
-}
-
-.stack-lang:hover > span:nth-child(3) {
-    animation: arrowAnim var(--dur) linear infinite;
-    animation-delay: 350ms;
-}
-
-.stack-lang:hover > span:nth-child(5) {
-    animation: arrowAnim var(--dur) linear infinite;
-    animation-delay: 350ms;
-}
-
-.stack-lang:hover > span:nth-child(6) {
-    animation: arrowAnim var(--dur) linear infinite;
-    animation-delay: 150ms;
-}
-
-.stack-lang:hover > span:nth-child(7) {
-    animation: arrowAnim var(--dur) linear infinite;
-}
-
-@keyframes arrowAnim {
-    0%, 49% {
-        opacity: 0;
+@keyframes transitionInLeft {
+    from {
+        opacity: 0%;
+        right: 0%;
     }
-    50%, 80% {
-        opacity: 100;
-    }
-    81%, 100% {
-        opacity: 0;
+    to {
+        opacity: 100%;
+        right: 50%;
+        transform: translateX(50%);
     }
 }
-/*Arrow Animation*/
 
-@media(max-width: 600px) {
-    #stack {
-        margin-inline: 1rem;
+@keyframes transitionOutRight {
+    from {
+        opacity: 100%;
+    }
+    to {
+        opacity: 0%;
+        right: 25%;
+        scale: 50%;
+    }
+}
+
+@keyframes transitionInRight {
+    from {
+        opacity: 0%;
+        right: 100%;
+    }
+    to {
+        opacity: 100%;
+        right: 50%;
+        transform: translateX(50%);
     }
 }
