overhauled projects page

--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -1,125 +1,47 @@
 #projects {
+    height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-block: 2rem;
+    flex-wrap: wrap;
+    gap: 20px;
+    overflow-y: auto;
 }
-
-/*SVG*/
-#projects-svg {
-    perspective: 800px;
-    animation: rotate 10s linear infinite;
-    border: 2px solid var(--main-green);
-    padding: 1rem;
-    background-color: #00800021;
-}
-    
-@keyframes rotate {
-    from {
-        transform: rotateY(0deg);
-    }
-    to {
-        transform: rotateY(360deg);
-    }
-}
-/*SVG*/
-
-/*Text*/
-#projects-text {
-    border-block: 2px dashed var(--main-green);
-    margin: 2rem;
-    background-color: #00800021;
-    max-width: 350px;
-    width: 100%;
-    text-align: center;
-    padding-block: 1rem;
-}
-
-#projects-h1 {
-    font-size: 2rem;
-    margin-block: 0;
-}
-
-#projects-p {
-    font-size: .8rem;
-    margin-bottom: 0;
-}
-/*Text*/
 
 .entry {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    border-block: 2px dashed var(--main-green);
-    margin-block: 2rem;
-    padding-block: 1rem;
-    background-color: #00800021;
+    flex-direction: column;
+    padding: 20px;
+    border: 2px solid var(--main-green);
+    width: 30%;
+    height: 300px;
+
+    img {
+        height: 45%;
+        margin-bottom: 20px;
+    }
 }
 
-.entry > img {
-    height: 5rem;
-}
-
-/*Entry Text*/
 .entry-text-container {
-    font-size: 1rem;
+    text-align: center;
+
+    a {
+        font-size: 2rem;            
+    }
+
+    p {
+        font-size: 1.4rem;
+    }
 }
 
-.entry-text-container a {
-    color: var(--main-green);
-    font-size: 2rem;
-    text-decoration: none;
-}
-
-.entry-text-container a::before {
-    content: "<";
-}
-
-.entry-text-container a::after {
-    content: ">";
-}
-
-.entry-text-container a:hover {
-    color: white;
-}
-/*Entry Text*/
-
-/*Tags*/
 .tags-container {
-    width: fit-content;
-    font-weight: 700;
-    border-block: 1px solid var(--main-green);
-}
+    font-size: 1.2rem;
 
-.tags-container span::before {
-    content: "-";
-}
-
-.tags-container span::after {
-    content: "-";
-}
-/*Tags*/
-
-@media(max-width: 600px) {
-    #projects {
-        margin-inline: 1rem;
-    }
-
-    .entry > img {
-        height: 4rem;
-        aspect-ratio: 1/1;
-    }
-
-    .entry-text-container a {
-        font-size: 1.5rem;
-    }
-
-    .entry-text-container p {
-        font-size: 0.9rem;
-    }
-
-    .tags-container span {
-        font-size: 0.8rem;
+    span {
+        background-color: var(--main-green);
+        color: #000;
+        padding-inline: 4px;
     }
 }
