--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 
 :root {
-    --main-green: #006321;
+    --main-green: #00632d;
     --auxiliary-green: #0063212d;
     --main-font: "VT323", monospace;
 }
@@ -19,6 +19,11 @@ body {
 
 a {
     color: var(--main-green);
+}
+
+a:hover {
+    background-color: var(--main-green);
+    color: #000;
 }
 
 #main-container {
