--- a/stylesheets/stack.css
+++ b/stylesheets/stack.css
@@ -2,7 +2,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
 }
 
 #carousel-container {
@@ -10,20 +10,14 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 90%;
-}
-
-#carousel-panels {
-    position: relative;
-    display: flex;
-    height: inherit;
+    height: 100%;
 }
 
 #carousel-prev, #carousel-next {
     background: none;
     border: 0;
-    color: var(--main-green);
     border: 2px solid var(--main-green);
+    color: var(--main-green);
     padding-inline: 12px;
     font-size: 8rem;
     cursor: pointer;
@@ -38,14 +32,9 @@
 
 .panel {
     display: none;
-    position: fixed;
-    right: 50%;
-    transform: translateX(50%);
     text-align: center;
     border: 2px solid var(--main-green);
-    padding-inline: 50px;
-    padding-block: 20px;
-    height: 60%;
+    overflow: auto;
     
     p {
         font-size: 3rem;
@@ -55,14 +44,18 @@
     }
 
     img {
-        height: 80%;
+        height: 300px;
     }
 }
 
 #carousel-all {
+    width: 100%;
     display: flex;
-    height: 10%;
     gap: 8px;
+    padding: 4px;
+    overflow-x: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 
     button {
         display: flex;
@@ -71,13 +64,18 @@
         background: none;
         border: 0;
         cursor: pointer;
-        height: fit-content;
         padding: 4px;
+        padding-block: 8px;
     }
 
     img {
         height: 50px;
+        pointer-events: none;
     }
+}
+
+#carousel-all::-webkit-scrollbar { 
+    display: none;  /* Older Safari and Chromium */
 }
 
 @keyframes transitionOutLeft {
@@ -123,5 +121,11 @@
         opacity: 100%;
         right: 50%;
         transform: translateX(50%);
+    }
+}
+
+@media(width < 1400px) {
+    #carousel-prev, #carousel-next {
+        font-size: 5rem;
     }
 }
