--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,14 +7,8 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
     margin: 0;
-    font-family: var(--main-font);
-    color: var(--main-green);
-    background: #000;
+    background-color: #000;
 }
 
 a {
@@ -24,17 +18,18 @@ a {
 a:hover {
     background-color: var(--main-green);
     color: #000;
+    text-decoration: none;
 }
 
 #main-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     height: 100vh;
-    width: 100vw;
     background-color: var(--auxiliary-green);
     box-sizing: border-box;
-    padding: 3rem;
+    padding: 2.5rem;
+    font-family: var(--main-font);
+    color: var(--main-green);
 }
 
 #buttons {
@@ -62,8 +57,10 @@ a:hover {
 
 #crt {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
     background:     
         linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
         linear-gradient(90deg, rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%);
@@ -121,5 +118,21 @@ a:hover {
     }
     56% {
         opacity: 0.27;
+    }
+}
+
+@media(width < 1400px) {
+    #buttons {
+        margin-top: 2rem;
+    }
+}
+
+@media(width < 600px) {
+    #main-container {
+        padding: 2rem;
+    }
+
+    #buttons button {
+        font-size: 1.35rem;
     }
 }
