--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9,6 +9,7 @@
 body {
     margin: 0;
     background-color: #000;
+    scroll-behavior: smooth;
 }
 
 a {
@@ -49,6 +50,11 @@ a:hover {
         cursor: pointer;
     }
 
+    button[data-active] {
+        background-color: var(--main-green);
+        color: #000;
+    }
+
     button:hover {
         background-color: var(--main-green);
         color: #000;
@@ -67,7 +73,7 @@ a:hover {
     background-size:
         100% 3px, 
         4px 100%;
-    opacity: 70%;
+    opacity: 50%;
     animation: flicker 0.15s infinite;
     pointer-events: none;
 }
@@ -135,4 +141,10 @@ a:hover {
     #buttons button {
         font-size: 1.35rem;
     }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  body {
+    scroll-behavior: auto;
+  }
 }
