--- a/Styles/header.css
+++ b/Styles/header.css
@@ -5,15 +5,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-block: 48px;
 }
 
 #header {
+    position: relative;
+    z-index: 10;
     border-block: 1px solid rgb(105, 105, 105);
     padding-block: 4px;
     max-width: 500px;
     width: 100%;
     margin-inline: 24px;
+    margin-top: 48px;
     display: flex;
     justify-content: center;
 }
