--- a/Styles/projects.css
+++ b/Styles/projects.css
@@ -29,6 +29,7 @@
     padding: 24px;
     box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.75);
     margin-inline: 24px;
+    background-color: rgb(36, 36, 36);
 }
 
 .project-top {
@@ -53,6 +54,7 @@
     border-bottom: 1px solid rgb(255, 183, 49);
     margin: 0;
     text-decoration: none;
+    color: white;
 }
 
 .title:hover {
