--- a/Styles/stack.css
+++ b/Styles/stack.css
@@ -14,6 +14,7 @@
     width: fit-content;
     box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.75);
     margin-inline: 24px;
+    background-color: rgb(36, 36, 36);
 }
 
 .stack-container h1 {
