added animation to header

--- a/Styles/header.css
+++ b/Styles/header.css
@@ -10,7 +10,6 @@ body {
 #header {
     position: relative;
     z-index: 10;
-    border-block: 1px solid rgb(105, 105, 105);
     padding-block: 4px;
     max-width: 500px;
     width: 100%;
@@ -18,20 +17,22 @@ body {
     margin-top: 48px;
     display: flex;
     justify-content: center;
+    perspective: 900px;
 }
 
-#header > div {
+#header-content {
     display: flex;
+    z-index: 10;
     flex-direction: column;
     width: fit-content;
 }
 
-#header > div > div {
+#header-content > div {
     display: flex;
     gap: 16px;
 }
 
-#header > div > div > div {
+#header-content > div > div {
     background-color: rgb(255, 183, 49);
     width: 0.6px;
     height: auto;
@@ -50,6 +51,56 @@ body {
     margin: 0;
     color: #FCFAEE;
     font-size: 1.5rem;
+}
+
+#rotate-wrapper {
+    position: absolute;
+    top: -115%;
+    width: 65%;
+    aspect-ratio: 1/1;
+    opacity: 80%;
+}
+
+#rotate {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 999px;
+    border: 4px solid rgb(105, 105, 105);
+    animation: rotate 20s linear infinite;
+}
+
+#ball {
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 999px;
+    background-color: rgb(255, 183, 49);
+    width: 30px;
+    height: 30px;
+    box-shadow: 0px 0px 30px 5px rgb(255, 185, 54);
+}
+
+#ball2 {
+    position: absolute;
+    top: calc(100% - 15px);
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 999px;
+    background-color: rgb(105, 105, 105);
+    width: 30px;
+    height: 30px;
+    box-shadow: 0px 0px 30px 5px rgb(129, 129, 129);
+}
+
+@keyframes rotate {
+    from {
+        transform: rotateX(76deg) rotateY(-4deg) rotateZ(0deg);
+    }
+    to {
+        transform: rotateX(76deg) rotateY(-4deg) rotateZ(360deg);
+    }
 }
 
 @media (max-width: 750px) {
