--- a/Styles/projects.css
+++ b/Styles/projects.css
@@ -1,7 +1,3 @@
-:root {
-    --scale: 1
-}
-
 #projects {
     display: flex;
     flex-direction: column;
@@ -30,6 +26,8 @@
     box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.75);
     margin-inline: 24px;
     background-color: rgb(36, 36, 36);
+    border-bottom: 3px solid rgb(255, 183, 49);
+    border-left: 3px solid rgb(255, 183, 49);
 }
 
 .project-top {
