--- a/Styles/footer.css
+++ b/Styles/footer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap');
+
 #footer {
     text-align: center;
     margin-top: 32px;
