--- a/Styles/projects.css
+++ b/Styles/projects.css
@@ -1,9 +1,10 @@
 #projects {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     margin-block: 80px;
     color: white;
+    margin-inline: 24px;
 }
 
 #projects h1 {
@@ -16,18 +17,16 @@
 .projects-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 64px;
+    gap: 48px;
 }
 
 .project-container {
     display: flex;
     flex-direction: column;
     padding: 24px;
-    box-shadow: 5px 5px 20px 0px rgba(0,0,0,0.75);
-    margin-inline: 24px;
-    background-color: rgb(36, 36, 36);
-    border-bottom: 3px solid rgb(255, 183, 49);
-    border-left: 3px solid rgb(255, 183, 49);
+    background-color: rgb(34, 34, 34);
+    box-shadow: -3px -3px rgb(255, 183, 49);
+    border-radius: 12px;
 }
 
 .project-top {
@@ -84,6 +83,10 @@
 
 .tags span:last-child:after {
     content: "";
+}
+
+.roundedD2G {
+    border-radius: 32px;
 }
 
 @media (max-width: 750px) {
