--- a/Styles/header.css
+++ b/Styles/header.css
@@ -17,36 +17,25 @@
     width: fit-content;
 }
 
-#header-content > div {
-    display: flex;
-    gap: 16px;
-}
-
-#header-content > div > div {
-    background-color: rgb(255, 183, 49);
-    width: 0.6px;
-    height: auto;
-}
-
 #header h1 {
     margin: 0;
     font-weight: 100;
     color: #FCFAEE;
-    font-size: 3rem;
+    font-size: 4.5rem;
     text-align: left;
 }
 
 #header h2 {
     font-weight: 100;
     margin: 0;
-    color: #FCFAEE;
+    color: rgb(255, 183, 49);
     font-size: 1.5rem;
 }
 
 #rotate-wrapper {
     position: absolute;
-    top: -115%;
-    width: 65%;
+    top: -120%;
+    width: 90%;
     aspect-ratio: 1/1;
     opacity: 80%;
 }
@@ -103,7 +92,12 @@
     }
 
     #header h2 {
-        font-size: 1.2rem;
+        font-size: 1rem;
+    }
+
+    #rotate-wrapper {
+        width: 65%;
+        top: -140%;
     }
 }
 
@@ -117,7 +111,7 @@
     }
 
     #header h2 {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 }
 
