--- a/Styles/projects.css
+++ b/Styles/projects.css
@@ -1,84 +1,91 @@
 #projects {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    margin-block: 80px;
+    margin-block: 60px;
     color: white;
     margin-inline: 24px;
 }
 
 #projects h1 {
     color: #FCFAEE;
-    font-size: 3rem;
-    margin-bottom: 64px;
-    font-weight: 100;
+    margin-bottom: 32px;
 }
 
 .projects-wrapper {
     display: flex;
-    flex-direction: column;
-    gap: 48px;
+    justify-content: center;
+    gap: 24px;
+    flex-wrap: wrap;
+    max-width: 1100px;
 }
 
 .project-container {
     display: flex;
     flex-direction: column;
     padding: 24px;
-    background-color: rgb(34, 34, 34);
-    box-shadow: -3px -3px rgb(255, 183, 49);
+    background-color: rgb(37, 37, 37);
+    box-shadow: inset 0px 0px 8px 2px rgb(56, 56, 56);
     border-radius: 12px;
+    max-width: 450px;
+    width: 100%;
 }
 
 .project-top {
     display: flex;
 }
 
-.project-top img {
-    height: 125px;
-    padding: 16px;
-}
-
-.project-top div {
-    width: 100%;
+.project-top > img {
+    height: 60px;
+    margin-right: 16px;
+    margin-bottom: 12px;
+    margin-left: 0;
 }
 
 .title {
     display: flex;
-    align-items: center;
-    gap: 6px;
     width: fit-content;
-    font-size: 2rem;
+    align-items: center;
     border-bottom: 1px solid rgb(255, 183, 49);
+    font-size: 1.5rem;
     margin: 0;
-    text-decoration: none;
     color: white;
+    text-decoration: none;
+}
+
+.title svg {
+    height: 20px;
 }
 
 .title:hover {
-    color: rgb(255, 183, 49) !important;
-    cursor: pointer;
-    border-bottom: 1px solid white;
-}
-
-.title:visited {
-    color: white;
+    opacity: 75%;
 }
 
 .desc {
-    font-size: 1.3rem;
+    margin-top: 8px;
+    font-size: 1rem;
 }
 
 .tags {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 0.9rem;
     border-top: 1px solid rgb(255, 183, 49);
     padding-top: 8px;
 }
 
-.tags span {
-    font-size: 1.1rem;
+.tags > span {
+    display: flex;
+    align-items: center;
+}
+
+.tags img {
+    height: 12px;
+    margin-right: 4px;
 }
 
 .tags span::after {
-    content: " - ";
+    content: "|";
+    margin-inline: 4px;
 }
 
 .tags span:last-child:after {
@@ -86,50 +93,20 @@
 }
 
 .roundedD2G {
-    border-radius: 32px;
+    border-radius: 12px;
 }
 
-@media (max-width: 750px) {
-    #projects h1 {
-        font-size: 2.5rem;
-    }
-
-    .project-top img {
-        height: 100px;
+@media (max-width: 1100px) {
+    .project-top > img {
+        height: 60px;
+        margin-right: 16px;
     }
 
     .title {
-        font-size: 1.7rem;
+        font-size: 1.3rem;
     }
-
+    
     .desc {
-        font-size: 1.1rem;
-    }
-
-    .tags span {
         font-size: 0.9rem;
-    }
-}
-
-@media (max-width: 450px) {
-    #projects h1 {
-        font-size: 2rem;
-    }
-
-    .project-top {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .title {
-        font-size: 1.6rem;
-    }
-
-    .desc {
-        font-size: 1rem;
-    }
-
-    .tags span {
-        font-size: 0.8rem;
     }
 }
