--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,12 +12,10 @@ body {
 .intersect {
     scale: 50%;
     opacity: 50%;
-    transform: translateY(-25px);
-    transition: all 350ms ease-in-out;
+    transition: all 250ms linear;
 }
 
 .grow {
     scale: 100% !important;
     opacity: 100% !important;
-    transform: translateY(0px);
 }
